# Dolores

./: .dockerignore  .gitignore  Dockerfile  LICENSE.txt  README.md  compose.yml  configload.py  db.sqlite3  docker-compose.yml  dockerfile  dolores.py  example_config.yml  notify.py  pyproject.toml  requirements.txt  schedule_test.py
.github/: dependabot.yml
.github/workflows/: autodeploy.yml  ghcr-publish.yml
config/: example_config.yml  roll_history.db
locales/: strings.json
modules/: audio.py  rolling.py  schedule.py  scheduling.py  text.py
sqlalchemy/: cprocessors.cp39-win_amd64.pyd  cresultproxy.cp39-win_amd64.pyd  cutils.cp39-win_amd64.pyd
sqlalchemy/util/: compat.py
src/: _logger.py  audio.py  chat.py  constants.py  dolores.py  images.py  lavaclient.py  main.py  rolling.py  scheduling.py
src/modules/: __init__.py  _helpers.py  _logger.py  audio.py  chat.py  generation.py  images.py  logger.py  rolling.py  scheduling.py  text.py
src/modules/audio/: base.py  checks.py  choice.py  events.py  handler.py  hooks.py  lavalink.py  play.py  queue.py  sources.py  view.py
src/modules/lava/: base.py  constants.py  handler.py  hooks.py  lavasearch.py  play.py  player.py  queue.py  sources.py  utils.py  view.py
