[project]
name = "dolores"
version = "2.0"
description = "Discord bot named Dolores"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apprise>=1.9.3",
    "hikari>=2.3.5",
    "hikari-lightbulb>=3.0.1",
    "hikari-miru>=4.2.0",
    "lavalink>=5.9.0",
    "openai>=1.95.1",
    "pydantic-ai>=0.0.29",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "tenacity>=9.0.0",
]

[tool.ty.rules]
unresolved-import = "ignore"
